--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-alembic==1.8.1
-Faker==14.1.0
-Flask==1.1.1
-flask_login==0.6.2
-flask_migrate==3.1.0
-Flask_PyMongo==2.3.0
-flask_restful==0.3.9
-Flask_SQLAlchemy==2.5.1
-flask_wtf==1.0.1
-pymongo==3.9.0
-requests==2.28.1
-SQLAlchemy==1.4.39
-Werkzeug==0.15.5
-WTForms==3.0.1
+alembic
+Faker
+Flask
+flask_login
+flask_migrate
+Flask_PyMongo
+flask_restful
+Flask_SQLAlchemy
+flask_wtf
+pymongo
+requests
+SQLAlchemy
+Werkzeug
+WTForms
